# artefex

./: .artefex.example.toml  .dockerignore  .gitignore  .pre-commit-hooks.yaml  Artefex.bat  Artefex.spec  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  README_INSTALL.txt  SECURITY.md  _test5.txt  build_windows.py  docker-compose.yml  launcher.py  mkdocs.yml  pyproject.toml
.ci-venv/: pyvenv.cfg
.ci-venv/Scripts/: activate  activate.bat
.claude/: settings.local.json
.claude/skills/: ralph.md
.github/: FUNDING.yml  labeler.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: auto-label.yml  ci.yml  docs.yml  stale.yml  welcome.yml
docs/: api.md  architecture.md  changelog.md  cli-reference.md  contributing.md  detectors.md  getting-started.md  gpu-training-roadmap.md  index.md  v1-roadmap.md
examples/: basic_usage.py  batch_processing.py  custom_plugin.py
installer/: artefex_setup.iss
src/artefex/: __init__.py  __main__.py  accessibility.py  analyze.py  api.py  cli.py  config.py  dashboard.py  detect_aigen.py  detect_camera.py  detect_forgery.py  detect_stego.py  fingerprint.py  gallery.py  gif_analyze.py  grade.py  heatmap.py  inpaint.py  model_downloader.py  models_registry.py  neural.py  orientation.py  palette.py  parallel.py  plugins.py  quality_gate.py  report.py  report_html.py  restore.py  similarity.py  story.py  video.py  watch.py  web.py
src/neural_enhance/: __init__.py  analyze.py  cli.py  models.py  report.py  restore.py
tests/: test_advanced.py  test_analyze.py  test_cli.py  test_cli_full.py  test_comprehensive.py  test_edge_cases.py  test_full_coverage.py  test_grade.py  test_model_validation.py  test_models.py  test_restore.py
train/: README.md  color_train.py  convert_pretrained.py  create_test_models.py  deblock_train.py  denoise_train.py  fbcnn_arch.py  generate_data.py  sharpen_train.py  train_all.py
