[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-enhance"
version = "0.1.0"
description = "Neural forensic restoration — diagnose and reverse media degradation chains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "neural-enhance contributors" }]
keywords = ["neural", "enhance", "image", "restoration", "forensic", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
neural-enhance = "neural_enhance.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_enhance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
